# DSCI524_Group10_Data_Summarizer

./: .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  summarize.ipynb  summarize_dtypes.ipynb  summarize_numeric.ipynb  summarize_target.ipynb
src/summarease/: __init__.py  clean_data.py  plot_correlation_heatmap.py  summarize.py  summarize_categorical  summarize_categorical.py  summarize_dtypes.py  summarize_missing_values.py  summarize_numeric.py  summarize_outliers.py  summarize_target.py  summarize_target_df.py
tests/: test_dtypes.py  test_summarease.py  test_summarize.py  test_summarize_numeric.py  test_summarize_target.py  test_summarize_target_df.py
